# KEnRef

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
config/: KEnRefConfig.h
core/: IoUtils.cpp  IoUtils.h  KEnRef.cpp  KEnRef.h  ensembleutils.h  kabsch.h  kenreffinalizer.h  kenrefinitializer.cpp  kenrefinitializer.h  kenrefrunner.h
gmxinterface/: KENRefRunner.cpp  KEnRefForceProvider.cpp  KEnRefForceProvider.h  KEnRefMDModule.cpp  KEnRefMDModule.h  gmxkenrefinitializer.cpp  gmxkenrefinitializer.h  gmxkenrefrunner.cpp  gmxkenrefrunner.h  gmxwrapper.cpp  gmxwrapper.h  mdrun.cpp
google_tests/: CMakeLists.txt  testHelper.cpp  testHelper.h  testIoUtils.cpp  testKEnRef.cpp  testKEnRefForceProvider.cpp  testKabsch.cpp
google_tests/lib/: .gitignore
include/config/: KEnRefConfig.h
include/core/: IoUtils.h  KEnRef.h  ensembleutils.h  kabsch.h  kenrefinitializer.h  kenrefrunner.h
include/gmxinterface/: KEnRefForceProvider.h  KEnRefMDModule.h  gmxwrapper.h
res/: KENREF_PARAMS.txt  fitted.gro  noe_1.tsv  noe_2.tsv  noe_3.tsv  noe_groups.R  posre.itp  singleton_data.csv  singleton_data_model01.csv  topol.top
res/10nsstart/: 10nsstart.gro  KENREF_PARAMS.txt  contmd.mdp  md_10_10.tpr  md_10_10_1.tpr  md_10_10_2.tpr  md_10_10_3.tpr  md_10_10_4.tpr  md_10_10_HBonds.tpr  mdout.mdp  selections_2-5_2687pairs.txt  selections_3-5_1978pairs.txt  singleton_data_10nsstart_0-5_2806pairs_includingGemini.csv  singleton_data_10nsstart_0-5_2806pairs_includingGemini_unsorted.csv  singleton_data_10nsstart_2-5_2687pairs.csv  singleton_data_10nsstart_3-5_1978pairs.csv  singleton_data_10nsstart_4atoms_1.csv  singleton_data_10nsstart_4atoms_2.csv  singleton_data_10nsstart_unsorted.csv  singleton_data_step0_fewAtomPairs.csv  singleton_data_step0_model01.csv  singleton_data_step0_testOneAtom_2.csv  singleton_data_step0_testOneAtom_3.csv  singleton_data_step0_testOneAtom_4.csv  singleton_data_step0_testOneAtom_5.csv  singleton_data_step0_testOneAtom_6.csv  topol.top
res/10nsstart+fitting/: 00ns.edr  00ns.trr  00ns.xtc  02ns.edr  02ns.gro  02ns.trr  02ns.xtc  0ns.edr  0ns.gro  0ns.trr  10ns.edr  10ns.gro  10ns.trr  10ns.xtc  KENREF_PARAMS_A.txt  KENREF_PARAMS_B.txt  KENREF_PARAMS_C.txt  KENREF_PARAMS_D.txt  KENREF_PARAMS_MULTI_A.txt  KENREF_PARAMS_MULTI_B.txt  KENREF_PARAMS_MULTI_C.txt  KENREF_PARAMS_MULTI_D.txt  KENREF_PARAMS_all.txt  KEnRefAtomIndex.ndx  contmd+trr.mdp  mdout.mdp  selections_2-5_2681pairs_all.txt  selections_3-5_1814pairs_20_A.txt  selections_3-5_1814pairs_20_B.txt  selections_3-5_1814pairs_20_C.txt  selections_3-5_1814pairs_20_D.txt  selections_3-5_1814pairs_80_A.txt  selections_3-5_1814pairs_80_B.txt  selections_3-5_1814pairs_80_C.txt  selections_3-5_1814pairs_80_D.txt  selections_3-5_1977pairs_20_A.txt  selections_3-5_1977pairs_20_B.txt  selections_3-5_1977pairs_20_C.txt  selections_3-5_1977pairs_20_D.txt  selections_3-5_1977pairs_80_A.txt  (+52 more)
res/cleanstart/: md_0_10.tpr  singleton_data_step0_testOneAtom_7.csv
res/google_tests/: atomIdPairs.txt  coords.txt  ensemble_coord_10ns.csv  ensemble_coord_moldel1.csv  ensemble_coord_moldel2.csv  ensemble_coord_moldel2_PBC_Broken.csv  singleton_data_10nsstart+fit_0+10.csv
res/josh/: KEnRefAtomIndex.ndx  md_0_1.tpr  npt.gro  topol.top
res/josh/EHEE_rd2/: topol_in.tpr  topol_out.tpr
res/josh/old.1/: KEnRefAtomIndex.ndx  confout.gro  ener.edr  md.tpr  state.cpt  topol.top  traj.trr  traj_comp.xtc
src/core/: IoUtils.cpp  KEnRef.cpp  kenrefinitializer.cpp
src/gmxinterface/: KENRefRunner.cpp  KEnRefForceProvider.cpp  KEnRefMDModule.cpp  gmxkenrefinitializer.cpp  gmxkenrefrunner.cpp  gmxwrapper.cpp  mdrun.cpp
src/tools/: EnergyCalculator.cpp  S2OrderParamsCalculator.cpp
